# tuxido

./: .gitignore  AGENTS.md  README.es.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
benchmark/: results.json  run.py
benchmark/complex/: dashboard.py  file_manager.py  todo_app.py
benchmark/medium/: async_error.py  counter.py  eval_error.py  system_error.py
benchmark/simple/: hello.py  os_import.py  syntax_error.py
scripts/: install_skill.py
src/tuxido/: __init__.py
src/tuxido/cli/: app.py
src/tuxido/core/: AGENTS.md  __init__.py  _metadata.py  errors.py  fixer.py  generator.py  healing.py  models.py  pipeline.py  report.py
src/tuxido/core/oracle/: __init__.py  framework_info.py
src/tuxido/core/validators/: AGENTS.md  __init__.py  l1_syntax.py  l2_static.py  l3_dom.py  l4_sandbox.py
src/tuxido/mcp/: __init__.py  __main__.py  fastmcp_server.py  server.py
src/tuxido/skills/tuxido/: SKILL.md
tests/core/: test_fixer.py  test_generator.py  test_healing.py  test_pipeline.py
tests/core/validators/: test_l1_syntax.py  test_l2_static.py
