[project]
name = "tuxido"
version = "0.1.0"
description = "AI-Native Framework Validator for Textual TUI Applications"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Hans Buddenberg" }
]
keywords = ["textual", "tui", "validator", "cli", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
mcp = [
    "fastmcp>=3.0.0rc2",
]

[project.scripts]
tuxido = "tuxido.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuxido"]
artifacts = [
    "src/tuxido/skills/**/SKILL.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]  # Errors, pyflakes, warnings, isort, naming
ignore = ["D203", "D213", "S101", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["tuxido"]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
disallow_untyped_defs = false
ignore_missing_imports = true
